fix alignment, closes #1046
Closes #1046

Merge request studip/studip!618

--- a/resources/assets/stylesheets/scss/actionmenu.scss
+++ b/resources/assets/stylesheets/scss/actionmenu.scss
@@ -31,7 +31,7 @@ $action-menu-shadow: 1px 1px 1px $dark-gray-color-60;
 
         padding: 4px 8px;
 
-        background: white;
+        background: $white;
         border: thin solid $dark-gray-color-45;
         box-shadow: $action-menu-shadow;
         font-weight: normal;
@@ -46,7 +46,7 @@ $action-menu-shadow: 1px 1px 1px $dark-gray-color-60;
         border: 0;
         position: relative;
         cursor: pointer;
-        display: inline-block;
+        display: block;
         padding: 0;
         width: 20px;
         height: 20px;
